# writing-an-interpreter

./: pyproject.toml
src/lexer/: lexer.py
src/my_token/: my_token.py
test/lexer/: test_lexer.py
token/: token.py
