[tool.poetry]
name = "writing-an-interpreter"
version = "0.1.0"
description = ""
authors = ["Vishal Kotak <vishal.sanjiv.kotak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
